#2750: code reformat