@@ -26,35 +26,36 @@ import tigase.util.repository.DataTypes;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 /**
- *
  * @author Wojtek
  */
 public class DataTypesTest {
 
 	private static final Logger log = TestLogger.getLogger(DataTypesTest.class);
-	
+
 	@Test
 	public void testParseNum() {
 
-		assertEquals( new Long( 262144L ), Long.valueOf( Integer.class.cast(DataTypes.parseNum("256k", Integer.class, 1 ) ) ) );
-		assertEquals( new Long( 262144L ), Long.class.cast( DataTypes.parseNum( "256k", Long.class, 1L ) ) );
-		assertEquals( new Double( 670720.0D ), Double.class.cast( DataTypes.parseNum( "655k", Double.class, 1D ) ) );
-		assertEquals( new Double( 262144F ), Double.valueOf( Float.class.cast( DataTypes.parseNum( "256k", Float.class, 1F ) ) ) );
-		assertEquals( new Long( 25 ), Long.valueOf( (long) DataTypes.parseNum( "25", Short.class, Short.valueOf( "1" ) ) ) );
-		assertEquals( new Long( 25 ), Long.valueOf( Byte.class.cast( DataTypes.parseNum( "25", Byte.class, Byte.valueOf( "1" ) ) ) ) );
+		assertEquals(new Long(262144L), Long.valueOf(Integer.class.cast(DataTypes.parseNum("256k", Integer.class, 1))));
+		assertEquals(new Long(262144L), Long.class.cast(DataTypes.parseNum("256k", Long.class, 1L)));
+		assertEquals(new Double(670720.0D), Double.class.cast(DataTypes.parseNum("655k", Double.class, 1D)));
+		assertEquals(new Double(262144F),
+					 Double.valueOf(Float.class.cast(DataTypes.parseNum("256k", Float.class, 1F))));
+		assertEquals(new Long(25), Long.valueOf((long) DataTypes.parseNum("25", Short.class, Short.valueOf("1"))));
+		assertEquals(new Long(25),
+					 Long.valueOf(Byte.class.cast(DataTypes.parseNum("25", Byte.class, Byte.valueOf("1")))));
 	}
 
 	@Test
 	public void testParseSizeInt() {
-		log.log(Level.FINE, "parseSizeInt" );
-		assertEquals( 1, DataTypes.parseSizeInt( "1", 1 ) );
-		assertEquals( 1024, DataTypes.parseSizeInt( "1k", 1 ) );
-		assertEquals( 1024 * 1024, DataTypes.parseSizeInt( "1m", 1 ) );
-		assertEquals( 1024 * 1024 * 1024, DataTypes.parseSizeInt( "1g", 1 ) );
-		assertEquals( 1, DataTypes.parseSizeInt( "fail", 1 ) );
+		log.log(Level.FINE, "parseSizeInt");
+		assertEquals(1, DataTypes.parseSizeInt("1", 1));
+		assertEquals(1024, DataTypes.parseSizeInt("1k", 1));
+		assertEquals(1024 * 1024, DataTypes.parseSizeInt("1m", 1));
+		assertEquals(1024 * 1024 * 1024, DataTypes.parseSizeInt("1g", 1));
+		assertEquals(1, DataTypes.parseSizeInt("fail", 1));
 	}
 
 }
